# xash3d

./: Makefile.am  autogen.sh  configure.ac
engine/: Android.mk  Makefile.am
engine/server/: sv_client.c  sv_main.c  sv_query.c
game_launch/: Makefile.am  xash.c
